--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~bootstrap/dist/css/bootstrap.css';
+@import "~font-awesome/css/font-awesome.css";
+
+.btn-full {
+  width: 100%;
+}
+
+header,
+footer,
+main {
+  padding: 20px;
+}
+
+.footer {
+  color: white;
+}
+
+.list {
+  margin: 30px 0;
+  padding: 0;
+  list-style: none;
+}
+
+.list__item {
+  width: 100%;
+  margin: 0 0 10px;
+}
+
+.list__block {
+  padding: 10px 15px;
+  border: 1px solid #ebccd1;
+  border-radius: 3px;
+  color: #a94442;
+}
