--- a/src/app/courses-list/courses-list-item/courses-list-item.component.html
+++ b/src/app/courses-list/courses-list-item/courses-list-item.component.html
@@ -2,22 +2,22 @@
 <li class="list__item">
   <div class="list__block">
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-md-6 col-sm-12">
         <h3>{{listItem.title}}</h3>
       </div>
-      <div class="col-sm-4">
+      <div class="col-md-4 col-sm-12">
         <time>{{listItem.duration}}</time>
         <span class="date">{{listItem.date}}</span>
       </div>
-      <div class="col-sm-2">
+      <div class="col-md-2 col-sm-12">
         <button class="btn btn-full"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>  Edit</button>
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-10">
+      <div class="col-md-10 col-sm-12">
         <p>{{listItem.description}}</p>
       </div>
-      <div class="col-sm-2">
+      <div class="col-md-2 col-sm-12">
         <button class="btn btn-full"><i class="fa fa-trash" aria-hidden="true"></i>  Delete</button>
       </div>
     </div>
