--- a/src/app/header/user-log-off/user-log-off.component.html
+++ b/src/app/header/user-log-off/user-log-off.component.html
@@ -1,3 +1,1 @@
-<p>
-  user-log-off works!
-</p>
+<button class="btn btn-secondary"><i class="fa fa-sign-out" aria-hidden="true"></i>  Logout</button>
