--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,18 +5,21 @@
 </header>
 <div class="container">
   <main>
-    <app-breadcrumbs></app-breadcrumbs>
     <div class="container">
       <div class="row">
-        <div class="col-sm-10 no-gutters">
+        <app-breadcrumbs></app-breadcrumbs>
+      </div>
+      <div class="row">
+        <div class="col-sm-12 no-gutters">
           <app-search></app-search>
-        </div>
-        <div class="float-right">
-          <button class="btn"><i class="fa fa-plus" aria-hidden="true"></i> Add course</button>
+          <div class="float-right">
+            <button class="btn btn-secondary"><i class="fa fa-plus" aria-hidden="true"></i> Add course</button>
+          </div>
         </div>
       </div>
     </div>
     <app-courses-list></app-courses-list>
+    <app-user></app-user>
   </main>
 </div>
 <footer class="footer">
