--- a/src/app/courses-list/courses-list.component.html
+++ b/src/app/courses-list/courses-list.component.html
@@ -4,6 +4,6 @@
   <ul class="list">
     <app-courses-list-item *ngFor="let item of ListItems" [listItem]="item"></app-courses-list-item>
   </ul>
-  <button class="btn btn-full"><i class="fa fa-download" aria-hidden="true"></i>  LOAD MORE</button>
+  <button class="btn btn-full btn-secondary"><i class="fa fa-download" aria-hidden="true"></i>  LOAD MORE</button>
 </div>
 <!-- ends course-list -->
