--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,8 +6,8 @@
       </h1>
       <div class="col-sm-9">
       <div class="float-right">
-        User login
-        <button class="btn"><i class="fa fa-sign-out" aria-hidden="true"></i>  Logout</button>
+        <app-user-log-in></app-user-log-in>
+        <app-user-log-off></app-user-log-off>
       </div>
     </div>
     </div>
