--- a/src/app/courses/components/courses-list/courses-list-item/courses-list-item.component.html
+++ b/src/app/courses/components/courses-list/courses-list-item/courses-list-item.component.html
@@ -6,8 +6,8 @@
         <h3>{{listItem.title}}</h3>
       </div>
       <div class="col-md-4 col-sm-12">
-        <time>{{listItem.duration}}</time>
-        <span class="date">{{listItem.date}}</span>
+        <time class="time">{{listItem.duration}}</time>
+        <span class="date">{{listItem.createDate}}</span>
       </div>
       <div class="col-md-2 col-sm-12">
         <button class="btn btn-full"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>  Edit</button>
