--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -1,9 +1,7 @@
 <!-- starts header -->
   <div class="container">
     <div class="row">
-      <h1 id="logo" class="col-sm-3">
-        <a href=""><img src="assets/images/logo.png" alt="logo"> </a>
-      </h1>
+      <app-logo></app-logo>
       <div class="col-sm-9">
       <div class="float-right">
         <app-user-log-in></app-user-log-in>
