--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-@import '~bootstrap/dist/css/bootstrap.css';
-@import "~font-awesome/css/font-awesome.css";
-
 .body {
   background: #f4faff;
   color:#4f646f;
@@ -93,6 +89,10 @@ footer{
 }
 
 .login {
+  margin-right: 15px;
+}
+
+.time {
   margin-right: 15px;
 }
 
