--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
         </div>
       </div>
     </div>
-    <app-courses-page-component></app-courses-page-component>
+    <app-courses-page></app-courses-page>
   </main>
 </div>
 <footer class="footer">
