--- a/src/app/courses/components/courses-list/courses-list.component.html
+++ b/src/app/courses/components/courses-list/courses-list.component.html
@@ -2,8 +2,12 @@
 <div class="row">
   <!-- starts course-list-item -->
   <ul class="list">
-    <app-courses-list-item *ngFor="let item of ListItems" [listItem]="item"></app-courses-list-item>
+    {{test}}
+    <app-courses-list-item *ngFor="let item of ListItems"
+                           [listItem]="item"
+                           [id]="id"
+                           (changeCounter)="change($event)"></app-courses-list-item>
   </ul>
-  <button class="btn btn-full btn-secondary"><i class="fa fa-download" aria-hidden="true"></i>  LOAD MORE</button>
+  <button class="btn btn-full btn-secondary" (click)="handleclick()"><i class="fa fa-download" aria-hidden="true"></i>  LOAD MORE</button>
 </div>
 <!-- ends course-list -->
