--- a/src/app/layout/components/search/search.component.html
+++ b/src/app/layout/components/search/search.component.html
@@ -1,6 +1,9 @@
 <!-- starts search-->
   <form action="" class="form-search">
-    <input type="text" class="form-search__input" placeholder="Name, etc">
-    <button class="btn btn-secondary"><i class="fa fa-search" aria-hidden="true"></i> Search</button>
+    <h1>Text ({{textValue}})</h1>
+    <input type="text" #textInput [(ngModel)]="textValue" name="textInput" class="form-search__input" placeholder="Name, etc" >
+    <button class="btn btn-secondary" (click)="logText(textInput.value)">
+      <i class="fa fa-search" aria-hidden="true"></i>
+      Search</button>
   </form>
 <!-- starts search -->
