training input-output

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<script src="app.component.ts"></script>
-<app-header></app-header>
 <div class="container">
-  <app-todo-list></app-todo-list>
+  <app-parent></app-parent>
 </div>
 
