--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,11 +10,12 @@
       </div>
       <div class="row">
         <div class="col-sm-12 no-gutters">
-          <app-toolbox></app-toolbox>
+          <app-toolbox (addCourse)="onLogText()"></app-toolbox>
         </div>
       </div>
     </div>
     <app-courses-page></app-courses-page>
+    <app-user></app-user>
   </main>
 </div>
 <footer class="footer">
