--- a/src/app/layout/components/toolbox/toolbox.component.html
+++ b/src/app/layout/components/toolbox/toolbox.component.html
@@ -1,4 +1,4 @@
 <app-search></app-search>
 <div class="float-right">
-  <button class="btn btn-secondary"><i class="fa fa-plus" aria-hidden="true"></i> Add course</button>
+  <button class="btn btn-secondary" (click)="onAddCourse($event)"><i class="fa fa-plus" aria-hidden="true"></i> Add course</button>
 </div>
