--- a/src/app/courses/components/courses-list/courses-list.component.html
+++ b/src/app/courses/components/courses-list/courses-list.component.html
@@ -1,4 +1,5 @@
 <!-- starts course-list -->
+<script src="courses-list.component.spec.ts"></script>
 <div class="row">
   <!-- starts course-list-item -->
   <div class="list">
