--- a/src/app/layout/components/toolbox/toolbox.component.html
+++ b/src/app/layout/components/toolbox/toolbox.component.html
@@ -1,3 +1,4 @@
+<script src="toolbox.component.spec.ts"></script>
 <app-search></app-search>
 <div class="float-right">
   <button class="btn btn-secondary" (click)="onAddCourse($event)"><i class="fa fa-plus" aria-hidden="true"></i> Add course</button>
