--- a/src/app/courses/components/courses-list/courses-list.component.html
+++ b/src/app/courses/components/courses-list/courses-list.component.html
@@ -7,6 +7,6 @@
                            [listItem]="item"
                            (deleteCourse)="onChangeId($event)"></app-courses-list-item>
   </div>
-  <button class="btn btn-full btn-secondary" (click)="onHandleclick()"><i class="fa fa-download" aria-hidden="true"></i>  LOAD MORE</button>
+  <button class="btn btn-full btn-secondary bt-delete" (click)="onHandleclick()"><i class="fa fa-download" aria-hidden="true"></i>  LOAD MORE</button>
 </div>
 <!-- ends course-list -->
