--- a/src/app/courses/components/courses-list/courses-list-item/courses-list-item.component.html
+++ b/src/app/courses/components/courses-list/courses-list-item/courses-list-item.component.html
@@ -1,13 +1,13 @@
 <!-- starts course-list-item -->
 <div class="list__item">
-  <div class="list__block">
+  <div class="list__block" appHighlight>
     <div class="row">
       <div class="col-md-6 col-sm-12">
-        <h3>{{listItem.title}}{{listItem.id}}</h3>
+        <h5>{{listItem.title | uppercase }}{{listItem.id}} | <i *appHide="false" [ngClass]="'ico-bg'" class="fa fa-star" aria-hidden="true"></i></h5>
       </div>
       <div class="col-md-4 col-sm-12">
-        <time class="time">{{listItem.duration}}</time>
-        <span class="date">{{listItem.createDate}}</span>
+        <time class="time">{{listItem.duration  | myTime}}</time>
+        <span class="date">{{listItem.createDate | date:"MM/dd/yy"}}</span>
       </div>
       <div class="col-md-2 col-sm-12">
         <button class="btn btn-full"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>  Edit</button>
