--- a/src/app/courses/components/courses-list/courses-list.component.html
+++ b/src/app/courses/components/courses-list/courses-list.component.html
@@ -1,11 +1,19 @@
-<!-- starts course-list -->
-<div class="row">
-  <!-- starts course-list-item -->
-  <div class="list">
-    <app-courses-list-item *ngFor="let item of ListItems"
-                           [listItem]="item"
-                           (deleteCourse)="onChangeId($event)"></app-courses-list-item>
+<div *ngIf='ListItems && ListItems.length >0'>
+  <!-- starts course-list -->
+  <div class="row">
+    <!-- starts course-list-item -->
+    <div class="list">
+      <app-courses-list-item *ngFor="let item of ListItems | orderBy: 'createDate'"
+                             [listItem]="item"
+                             (deleteCourse)="onChangeId($event)"></app-courses-list-item>
+    </div>
+    <button class="btn btn-full btn-secondary" (click)="onHandleclick()"><i class="fa fa-download" aria-hidden="true"></i>  LOAD MORE</button>
   </div>
-  <button class="btn btn-full btn-secondary" (click)="onHandleclick()"><i class="fa fa-download" aria-hidden="true"></i>  LOAD MORE</button>
+  <!-- ends course-list -->
 </div>
-<!-- ends course-list -->
+
+<div *ngIf='ListItems == undefined || ListItems.length == 0'>
+  <div class="row">
+    <div class="alert col-sm-12">NO DATA. FEEL FREE TO ADD A NEW COURSE</div>
+  </div>
+</div>
