--- a/src/styles.css
+++ b/src/styles.css
@@ -96,6 +96,18 @@ footer{
   margin-right: 15px;
 }
 
+.alert {
+  width: 100%;
+  background: #cb2e8e;
+  color: #fff;
+  font-size: 16px;
+  text-align: center;
+}
+
+.ico-bg {
+  color: #cb2e8e;
+}
+
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
   .float-right {
