--- a/src/app/courses/components/courses-list/courses-list.component.html
+++ b/src/app/courses/components/courses-list/courses-list.component.html
@@ -1,11 +1,12 @@
+
 <div *ngIf='ListItems && ListItems.length >0'>
   <!-- starts course-list -->
   <div class="row">
     <!-- starts course-list-item -->
     <div class="list">
-      <app-courses-list-item *ngFor="let item of ListItems | orderBy: 'createDate'"
+        <app-courses-list-item *ngFor="let item of ListItems"
                              [listItem]="item"
-                             (deleteCourse)="onChangeId($event)"></app-courses-list-item>
+                             (deleteCourse)="onChangeId($event)" ></app-courses-list-item>
     </div>
     <button class="btn btn-full btn-secondary" (click)="onHandleclick()"><i class="fa fa-download" aria-hidden="true"></i>  LOAD MORE</button>
   </div>
