--- a/src/app/courses/components/courses-list/courses-list-item/courses-list-item.component.html
+++ b/src/app/courses/components/courses-list/courses-list-item/courses-list-item.component.html
@@ -1,9 +1,9 @@
 <!-- starts course-list-item -->
 <div class="list__item">
-  <div class="list__block" appHighlight *ngIf="creationDate < currentDate" [ngClass]="'list__block_fresh'">
+  <div class="list__block" *appIf="creationDate < currentDate" [ngClass]="'list__block_fresh'">
     <div class="row">
       <div class="col-md-6 col-sm-12">
-        <h5>{{listItem.title | uppercase }}{{listItem.id}} | <i *appHide="false" [ngClass]="'ico-bg'" class="fa fa-star" aria-hidden="true"></i></h5>
+        <h5>{{listItem.title | uppercase }}{{listItem.id}} | <i *appIf="false" [ngClass]="'ico-bg'" class="fa fa-star" aria-hidden="true"></i></h5>
       </div>
       <div class="col-md-4 col-sm-12">
         <time class="time">{{listItem.duration  | myTime}}</time>
@@ -22,10 +22,10 @@
       </div>
     </div>
   </div>
-  <div class="list__block" appHighlight *ngIf="creationDate > currentDate" [ngClass]="'list__block_upcoming'">
+  <div class="list__block" appHighlight *appIf="creationDate > currentDate" [ngClass]="'list__block_upcoming'">
     <div class="row">
       <div class="col-md-6 col-sm-12">
-        <h5>{{listItem.title | uppercase }}{{listItem.id}} | <i *appHide="false" [ngClass]="'ico-bg'" class="fa fa-star" aria-hidden="true"></i></h5>
+        <h5>{{listItem.title | uppercase }}{{listItem.id}} | <i *appIf="false" [ngClass]="'ico-bg'" class="fa fa-star" aria-hidden="true"></i></h5>
       </div>
       <div class="col-md-4 col-sm-12">
         <time class="time">{{listItem.duration  | myTime}}</time>
