--- a/src/app/courses/components/courses-list/courses-list-item/courses-list-item.component.html
+++ b/src/app/courses/components/courses-list/courses-list-item/courses-list-item.component.html
@@ -22,7 +22,7 @@
       </div>
     </div>
   </div>
-  <div class="list__block" appHighlight *appIf="creationDate > currentDate" [ngClass]="'list__block_upcoming'">
+  <div class="list__block" *appIf="creationDate > currentDate" [ngClass]="'list__block_upcoming'">
     <div class="row">
       <div class="col-md-6 col-sm-12">
         <h5>{{listItem.title | uppercase }}{{listItem.id}} | <i *appIf="false" [ngClass]="'ico-bg'" class="fa fa-star" aria-hidden="true"></i></h5>
