--- a/src/app/courses/components/courses-list/courses-list.component.html
+++ b/src/app/courses/components/courses-list/courses-list.component.html
@@ -4,7 +4,7 @@
   <div class="row">
     <!-- starts course-list-item -->
     <div class="list">
-        <app-courses-list-item *ngFor="let item of ListItems | orderBy : 'createDate'"
+        <app-courses-list-item *ngFor="let item of ListItems | orderBy : 'createDate' | filter : searchText"
                              [listItem]="item"
                              (deleteCourse)="onChangeId($event)" ></app-courses-list-item>
     </div>
