--- a/src/app/courses/components/courses-list/courses-list.component.html
+++ b/src/app/courses/components/courses-list/courses-list.component.html
@@ -4,13 +4,22 @@
   <div class="row">
     <!-- starts course-list-item -->
     <div class="list">
-
-        <app-courses-list-item  *ngFor="let item of ListItems | orderBy : 'createDate' | filter : searchText: filterToggle"
+      <ng-container *ngIf="filterToggle">
+        <app-courses-list-item  *ngFor="let item of ListItems | filter : 'title'"
                              [listItem]="item"
                              (deleteCourse)="onChangeId($event)" >
-          <ng-container *ngIf="filterToggle"></ng-container>
-        </app-courses-list-item>
 
+        </app-courses-list-item>
+      </ng-container>
+      <ng-container *ngIf="!filterToggle">
+        <app-courses-list-item  *ngFor="let item of ListItems | orderBy : 'createDate'"
+                                [listItem]="item"
+                                (deleteCourse)="onChangeId($event)" >
+
+        </app-courses-list-item>
+      </ng-container>
+      <button type="submit" class="btn icon-search" (click)="submit()">For test that toggle works</button>
+      Data from search component is: {{input}}
     </div>
     <button class="btn btn-full btn-secondary" (click)="onHandleclick()"><i class="fa fa-download" aria-hidden="true"></i>  LOAD MORE</button>
   </div>
