--- a/src/app/layout/components/search/search.component.html
+++ b/src/app/layout/components/search/search.component.html
@@ -4,5 +4,6 @@
     <button class="btn btn-secondary" (click)="onSubmit()">
       <i class="fa fa-search" aria-hidden="true"></i>
       Search</button>
+    <button class="btn btn-primary" (click)="onClick()">Pass Data</button>
   </form>
 <!-- starts search -->
