trying to add a subscription

--- a/src/app/courses/components/courses-list/courses-list.component.html
+++ b/src/app/courses/components/courses-list/courses-list.component.html
@@ -18,7 +18,7 @@
 
         </app-courses-list-item>
       </ng-container>
-      <button type="submit" class="btn icon-search" (click)="submit()">For test that toggle works</button>
+      <button type="submit" class="btn icon-search" (click)="submit()">For test, show that toggle works</button>
       Data from search component is: {{input}}
     </div>
     <button class="btn btn-full btn-secondary" (click)="onHandleclick()"><i class="fa fa-download" aria-hidden="true"></i>  LOAD MORE</button>
