--- a/src/app/courses/components/courses-list/courses-list.component.html
+++ b/src/app/courses/components/courses-list/courses-list.component.html
@@ -6,7 +6,7 @@
     <div class="list">
         <app-courses-list-item  *ngFor="let item of ListItems | orderBy : 'createDate' | filter : 'searchText'"
                                 [listItem]="item"
-                                (deleteCourse)="onChangeId($event)">
+                                (deleteCourse)="onChangeId($event)"  [searchText]="searchText">
 
         </app-courses-list-item>
     </div>
