task 5 added login form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,1 @@
-<!-- starts  markup -->
-<header class="header">
-  <app-header></app-header>
-</header>
-<div class="container">
-  <main>
-    <div class="container">
-      <div class="row">
-        <app-breadcrumbs></app-breadcrumbs>
-      </div>
-      <div class="row">
-        <div class="col-sm-12 no-gutters">
-          <app-toolbox></app-toolbox>
-        </div>
-      </div>
-    </div>
-    <app-courses-page></app-courses-page>
-    <app-user></app-user>
-  </main>
-</div>
-<footer class="footer">
-  <app-footer></app-footer>
-</footer>
-<!--ends  markup -->
+<router-outlet></router-outlet>
