--- a/src/app/users/components/user-entity/user-entity.component.html
+++ b/src/app/users/components/user-entity/user-entity.component.html
@@ -2,5 +2,6 @@
   <td>{{userItem.id}}</td>
   <td>{{userItem.firstName}}</td>
   <td>{{userItem.lastName}}</td>
+  <td>{{userItem.email}}</td>
 </tr>
 
