--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,7 +15,7 @@
                 <label for="pwd">Password:</label>
                 <input type="password" class="form-control" id="pwd" name="passowrd" [(ngModel)]="password">
               </div>
-              <button class="btn btn-default" (click)="login()">Login</button>
+              <button class="btn btn-default" (click)="onLogin()">Login</button>
             </form>
           </div>
         </div>
