--- a/src/app/courses/components/courses-list/courses-list.component.html
+++ b/src/app/courses/components/courses-list/courses-list.component.html
@@ -4,9 +4,9 @@
   <div class="row">
     <!-- starts course-list-item -->
     <div class="list">
-        <app-courses-list-item  *ngFor="let item of ListItems | orderBy : 'createDate' | filter : 'searchText'"
+        <app-courses-list-item  *ngFor="let item of ListItems |  filter : searchText | orderBy: sortField: order"
                                 [listItem]="item"
-                                (deleteCourse)="onChangeId($event)"  [searchText]="searchText">
+                                (deleteCourse)="onChangeId($event)">
 
         </app-courses-list-item>
     </div>
