--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,26 +1,33 @@
 <div class="outer">
   <div class="outer-inner">
-<div class="container">
-  <div class="row">
-    <div class="col-md-6 offset-3">
-        <div class="panel panel-default">
-          <div class="panel-heading">Login form:</div>
-          <div class="panel-body">
-            <form class="login-form">
-              <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" class="form-control" id="email" name="email" [(ngModel)]="email">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 offset-3">
+            <div class="panel panel-default">
+              <div class="panel-heading">Login form:</div>
+              <div class="panel-body">
+                <form class="login-form">
+                  <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" class="form-control" id="email" name="email" [(ngModel)]="email">
+                  </div>
+                  <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input type="password" class="form-control" id="password" name="password" [(ngModel)]="password">
+                  </div>
+                  <button class="btn btn-default" (click)="OnLogin()">Login</button>
+                  <div class="form-group">
+                    <a [routerLink]="" (click)="OnStore()">Stores fake user info and token to local storage </a><br>
+                    <a [routerLink]="" (click)="OnRetrieve()">Retrive</a><br>
+                    <a [routerLink]="" (click)="OnRetrieveId()">Retrive Login</a><br>
+                    <a [routerLink]="" (click)="OnClear()">Wipes fake user info and token from local storage</a><br>
+                    <a [routerLink]="" (click)="IsAuth()">Is auth</a>
+                  </div>
+                </form>
               </div>
-              <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd" name="passowrd" [(ngModel)]="password">
-              </div>
-              <button class="btn btn-default" (click)="onLogin()">Login</button>
-            </form>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
   </div>
 </div>
