--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -6,7 +6,7 @@
   <main>
     <div class="container">
       <div class="row">
-        <app-breadcrumbs></app-breadcrumbs>
+        <app-breadcrumbs *ngIf="IsAuth()"></app-breadcrumbs>
       </div>
       <div class="row">
         <div class="col-sm-12 no-gutters">
@@ -15,6 +15,7 @@
       </div>
     </div>
     <app-courses-page></app-courses-page>
+    <app-user *ngIf="IsAuth()"></app-user>
   </main>
 </div>
 <footer class="footer">
