--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,7 +9,7 @@
                 <form class="login-form">
                   <div class="form-group">
                     <label for="email">Email:</label>
-                    <input type="email" class="form-control" id="email" name="email" [(ngModel)]="email">
+                    <input type="email" class="form-control" id="email" name="email" [(ngModel)]="login">
                   </div>
                   <div class="form-group">
                     <label for="password">Password:</label>
