attempt to fix search

--- a/src/app/layout/components/user-log-off/user-log-off.component.html
+++ b/src/app/layout/components/user-log-off/user-log-off.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-secondary" (click)="OnClear()" ><i class="fa fa-sign-out" aria-hidden="true"></i>  Logout</button>
+<button class="btn btn-secondary" (click)="OnLogout()" ><i class="fa fa-sign-out" aria-hidden="true"></i>  Logout</button>
