--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -10,7 +10,7 @@
       </div>
       <div class="row">
         <div class="col-sm-12 no-gutters">
-          <app-toolbox></app-toolbox>
+          <app-toolbox (search)="onSearch($event)"></app-toolbox>
         </div>
       </div>
     </div>
