small update to the task

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,6 +6,10 @@
             <div class="panel panel-default">
               <div class="panel-heading">Login form:</div>
               <div class="panel-body">
+                <div class="col-md-6 offset-3">
+                  login: test@gmail.com<br>
+                  password: 1
+                </div>
                 <form class="login-form">
                   <div class="form-group">
                     <label for="email">Email:</label>
