--- a/src/app/courses/components/courses-list/courses-list.component.html
+++ b/src/app/courses/components/courses-list/courses-list.component.html
@@ -6,7 +6,7 @@
     <div class="list">
         <app-courses-list-item  *ngFor="let item of ListItems |  filter : searchText | orderBy: sortField: order"
                                 [listItem]="item"
-                                (deleteCourse)="onChangeId($event)">
+                                (deleteCourse)="onDeleteCourse($event)" (editCourse)="onEditCourse($event)" (getbyId)="onGetCourseById($event)">
 
         </app-courses-list-item>
     </div>
