--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,7 +23,7 @@
                   <div class="form-group">
                     <a [routerLink]="" (click)="onLogin()">Stores fake user info and token to local storage </a><br>
                     <a [routerLink]="" (click)="onRetrieve()">Retrive</a><br>
-                    <a [routerLink]="" (click)="onGetUserInfo()">Retrive Login</a><br>
+                    <a [routerLink]="" (click)="onGetUserInfo(login)">Retrive Login</a><br>
                     <a [routerLink]="" (click)="onLogout()">Wipes fake user info and token from local storage</a><br>
                     <a [routerLink]="" (click)="isAuth()">Is auth</a>
                   </div>
