--- a/src/app/courses/components/courses-list/courses-list.component.html
+++ b/src/app/courses/components/courses-list/courses-list.component.html
@@ -1,22 +1,7 @@
+<app-courses-list-item  *ngFor="let item of ListItems |  filter : searchText | orderBy: sortField: order"
+                        [listItem]="item"
+                        (deleteCourse)="onDelete($event)"
+                        (editCourse)="onEdit($event)"
+                        (getbyId)="onGetCourseById($event)">
 
-<div *ngIf='ListItems && ListItems.length >0'>
-  <!-- starts course-list -->
-  <div class="row">
-    <!-- starts course-list-item -->
-    <div class="list">
-        <app-courses-list-item  *ngFor="let item of ListItems |  filter : searchText | orderBy: sortField: order"
-                                [listItem]="item"
-                                (deleteCourse)="onDeleteCourse($event)" (editCourse)="onEditCourse($event)" (getbyId)="onGetCourseById($event)">
-
-        </app-courses-list-item>
-    </div>
-    <button class="btn btn-full btn-secondary" (click)="onHandleclick()"><i class="fa fa-download" aria-hidden="true"></i>  LOAD MORE</button>
-  </div>
-  <!-- ends course-list -->
-</div>
-
-<div *ngIf='ListItems == undefined || ListItems.length == 0'>
-  <div class="row">
-    <div class="alert col-sm-12">NO DATA. FEEL FREE TO ADD A NEW COURSE</div>
-  </div>
-</div>
+</app-courses-list-item>
