--- a/src/app/courses/components/courses-page/courses-page.component.html
+++ b/src/app/courses/components/courses-page/courses-page.component.html
@@ -1,2 +1,2 @@
-<app-courses-list [searchText]="searchText"></app-courses-list>
+<app-courses-container [searchText]="searchText"></app-courses-container>
 
