fixes issues after mentor's review

--- a/src/app/courses/components/courses-page/courses-page.component.html
+++ b/src/app/courses/components/courses-page/courses-page.component.html
@@ -1,2 +1,25 @@
-<app-courses-container [searchText]="searchText"></app-courses-container>
+<div *ngIf='ListItems && ListItems.length >0'>
+  <!-- starts course-list -->
+  <div class="row">
+    <!-- starts course-list-item -->
+    <div class="list">
+      <app-courses-list [ListItems]="ListItems"
+                        [searchText]="searchText"
+                        (deleteCourse)="onDeleteCourse($event)"
+                        (editCourse)="onEditCourse($event)"
+                        (getbyId)="onGetCourseById($event)">
+      </app-courses-list>
+    </div>
+    <button class="btn btn-full btn-secondary" (click)="onHandleclick()"><i class="fa fa-download" aria-hidden="true"></i>  LOAD MORE</button>
+  </div>
+  <!-- ends course-list -->
+</div>
+
+<div *ngIf='ListItems == undefined || ListItems.length == 0'>
+  <div class="row">
+    <div class="alert col-sm-12">NO DATA. FEEL FREE TO ADD A NEW COURSE</div>
+  </div>
+</div>
+
+
 
