added guards to the project

--- a/src/app/add-page/add-page.component.html
+++ b/src/app/add-page/add-page.component.html
@@ -3,6 +3,11 @@
     <div class="container">
       <div class="row">
         <div class="col-md-10 offset-1">
+          <app-breadcrumbs [pageCurrent]="pageCurrent"></app-breadcrumbs>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-10 offset-1">
           <div class="panel panel-default">
             <div class="panel-heading">Add new course:</div>
             <div class="panel-body">
