--- a/src/app/layout/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/layout/components/breadcrumbs/breadcrumbs.component.html
@@ -1,8 +1,8 @@
 <!-- starts breadcrumbs -->
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="#">Courses</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Item</li>
+    <li class="breadcrumb-item"><a href="/landing-page">Courses</a></li>
+    <li class="breadcrumb-item active" aria-current="page">{{ pageCurrent }}</li>
   </ol>
 </nav>
 <!-- ends breadcrumbs -->
