--- a/src/app/edit-page/edit-page.component.html
+++ b/src/app/edit-page/edit-page.component.html
@@ -14,7 +14,7 @@
               <form class="add-course-form">
                 <div class="form-group">
                   <label for="title">Title:</label>
-                  <input type="text" class="form-control" id="title" name="title" [(ngModel)]="listItem.title + listItem.id">
+                  <input type="text" class="form-control" id="title" name="title" [(ngModel)]="listItem.title">
                 </div>
                 <div class="form-group">
                   <label for="description">Description:</label>
