--- a/src/app/courses/components/courses-list/courses-list-item/courses-list-item.component.html
+++ b/src/app/courses/components/courses-list/courses-list-item/courses-list-item.component.html
@@ -11,7 +11,7 @@
         <span class="date">{{listItem.createDate | date:"dd.MM.yyyy"}}</span>
       </div>
       <div class="col-md-2 col-sm-12">
-        <button (click)="goToPageWithParams($event)" class="btn btn-full"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Edit</button>
+        <button (click)="goToEditPage($event)" class="btn btn-full"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Edit</button>
       </div>
     </div>
     <div class="row">
