--- a/src/app/layout/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/layout/components/breadcrumbs/breadcrumbs.component.html
@@ -2,7 +2,7 @@
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="/landing-page">Courses</a></li>
-    <li class="breadcrumb-item active" aria-current="page">{{ pageCurrent }}</li>
+    <li class="breadcrumb-item active" aria-current="page" *ngIf="pageCurrent">{{ pageCurrent }}</li>
   </ol>
 </nav>
 <!-- ends breadcrumbs -->
