--- a/src/app/layout/components/user-log-in/user-log-in.component.html
+++ b/src/app/layout/components/user-log-in/user-log-in.component.html
@@ -1,1 +1,5 @@
+<!-- TODO: тут надо добавить RouterLink, которая должна вести на страницу логина,
+  может быть даже лучше реализовать клик и обработчик, чтобы очистить информацию о пользователе.
+  Хотя этого в требованиях пока нет.
+-->
 <a href="" class="login">User Log-in</a>
